<resources>
    <string name="app_name">GitHub-Explorer</string>
    <string name="default_web_client_id">885946170744-73cg9bcohuodukcbe8hdt9agonu19m2f.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github">Github</string>
    <string name="repository">Repository</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="owner_name">owner Name</string>
    <string name="description_heading">Description</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="star_count">Star count</string>
    <string name="sign_out">Sign out</string>
    <string name="computer_icon">Computer Icon</string>
    <string name="repo_heading">Repo Heading</string>
    <string name="trail_number">60</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="invalid_search_text">No repositories found with the given name !! </string>
</resources>