<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/repo_list_item"
    android:theme="@style/Base.Theme.GithubRepositories.RecyclerView">

    <ImageView
        android:id="@+id/computer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/computer"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/repo_description_in_list_of_repos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/computer_icon" />

    <TextView
        android:id="@+id/repo_name_in_list_of_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/repo_heading"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/computer"
        app:layout_constraintStart_toEndOf="@+id/computer"
        app:layout_constraintTop_toTopOf="@id/computer" />

    <TextView
        android:id="@+id/repo_description_in_list_of_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/description"
        android:lines="3"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repo_name_in_list_of_repos" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/star"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/repo_description_in_list_of_repos"
        app:layout_constraintEnd_toStartOf="@+id/repo_count_in_list_of_repos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repo_count_in_list_of_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/trail_number"
        app:layout_constraintBottom_toTopOf="@+id/repo_description_in_list_of_repos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>